syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
    rpc cadastrarChavePix (NovaChavePixRequest) returns (NovaChavePixResponse) {}

}

service KeyManagerRemoveGrpcService {
    rpc deletarChavePix (DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

enum TipoChavePix {
    TIPO_CHAVE_DESCONHECIDO = 0;
    CELULAR = 1;
    EMAIL = 2;
    ALEATORIO = 3;
    CPF = 4;
}

enum TipoConta {
    TIPO_CONTA_DESCONHECIDO = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message NovaChavePixRequest {
    string idCliente = 1;
    TipoChavePix tipoChave = 2;
    string valor = 3;
    TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
    string pixId = 1;
}

message DeletaChavePixRequest {
    string pixId = 1;
    string idCliente = 2;
}

message DeletaChavePixResponse {
    string pixId = 1;
    string idCliente = 2;
}